# rustle

./: Cargo.toml  README.md  flake.nix  readme.md  result
.github/workflows/: lint.yml
src/: main.rs
